force-app/main/default/objects/skilljar__Path_Item_Progress__c/skilljar__Path_Item_Progress__c.object-meta.xml
<CustomObject>
    <label>Path Item Progress</label>
    <nameField>
        <label>Path Item Progress Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Path Item Progresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>