force-app/main/default/objects/skilljar__Path_Item_Progress__c/fields/skilljar__Course_Progress__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Course_Progress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Progress</label>
    <referenceTo>skilljar__Course_Progress__c</referenceTo>
    <relationshipLabel>Path Item Progresses</relationshipLabel>
    <relationshipName>Path_Item_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>