force-app/main/default/objects/skilljar__Path_Item_Progress__c/fields/skilljar__Path_Item__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Path_Item__c</fullName>
    <label>Path Item</label>
    <referenceTo>skilljar__Path_Item__c</referenceTo>
    <relationshipLabel>Path Item Progresses</relationshipLabel>
    <relationshipName>Path_Item_Progresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>